# autotools-modules

./: README  README.md
macros/: ax_lib_gdal.m4  ax_lib_sqlite3.m4  ax_prog_doxygen.m4
test/: AUTHORS  COPYING  Makefile.am  README  autogen.sh  config.h.in  configure.ac
test/src/: Makefile.am  main.cpp
