## Process this file with automake to produce Makefile.in
## Created by Anjuta
AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = autoconf_modules_test

autoconf_modules_test_SOURCES = \
	main.cpp

autoconf_modules_test_LDFLAGS = 

autoconf_modules_test_LDADD = 

